# discord.rs

./: Cargo.toml
discord/: Cargo.toml
discord/src/: _asset.rs  _colour.rs  _discord.rs  _embed.rs  _file.rs  _intents.rs  _message.rs  _permissions.rs  _user.rs  lib.rs
discord/src/commands/bot/: __bot.rs  _events.rs  mod.rs
src/: main.rs
