[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
discord = { path = "./discord" }
tokio = { version = "1", features = ["full"] }          # Async Runtime
serde = { version = "1", features = ["derive"] }        # JSON Parsing
serde_json = "1"                                        # JSON Handling
reqwest = { version = "0.11", features = ["json", "rustls-tls"] } # REST HTTP Client
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"                                        # Async Utilities